[package]
name = "wikis"
version = "0.1.0"
edition = "2021"
description = "A CLI tool to fetch a summary on a topic from Wikipedia."

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
reqwest = { version = "0.11.16", features = ["json", "blocking"]}
serde = { version = "1.0.152", features = ["derive"]}
serde_json = "1.0" 
webbrowser = "1.0.4"
